k8s-manifest/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flowforge-gateway
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "dev.flowforge.fun"
    allowedRoutes:
      namespaces:
        from: Same
  - name: http-preview
    protocol: HTTP
    port: 80
    hostname: "preview.flowforge.fun"
    allowedRoutes:
      namespaces:
        from: Same
