k8s-manifest/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flowforge-routes
  namespace: default
spec:
  parentRefs:
  - name: flowforge-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: gateway
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flowforge-dev-frontend-active
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flowforge-preview-routes
  namespace: default
spec:
  parentRefs:
  - name: flowforge-gateway
    sectionName: http-preview
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: gateway
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flowforge-dev-frontend-preview
      port: 80
